--- a/Aplikacja2 Szyfrator/Aplikacja2 Szyfrator.csproj
+++ b/Aplikacja2 Szyfrator/Aplikacja2 Szyfrator.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="wpisz tu hasło.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="wpisz tu hasło.Designer.cs">
+      <DependentUpon>wpisz tu hasło.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +72,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="wpisz tu hasło.resx">
+      <DependentUpon>wpisz tu hasło.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
